--- a/app/src/main/res/layout/signin_page.xml
+++ b/app/src/main/res/layout/signin_page.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp">
+        android:layout_marginTop="150dp">
 
         <View
             android:id="@+id/view"
@@ -35,9 +35,9 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="26sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="@id/view"
+            app:layout_constraintStart_toStartOf="@id/view"
+            app:layout_constraintTop_toTopOf="@id/view" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/username_signin"
@@ -52,8 +52,9 @@
                     android:id="@+id/username_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:fontFamily="@font/montserrat"
-                    android:hint="@string/username" />
+                    android:hint="@string/username_signin" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -70,7 +71,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat"
-                    android:hint="@string/password"
+                    android:textColor="@color/black"
+                    android:hint="@string/password_signin"
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,8 +97,8 @@
             android:background="@drawable/button_radius"
             android:fontFamily="@font/montserrat_bold"
             android:text="@string/bt_confirm_si"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/view"
+            app:layout_constraintStart_toStartOf="@id/view"
             app:layout_constraintTop_toBottomOf="@+id/message_signin"
             tools:ignore="MissingConstraints" />
 
